<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/lin_lay1"
        android:background="@color/colorCustom"
        android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_above="@id/adView"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:id="@+id/pl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/principal_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/principal"
                    android:drawableEnd="@drawable/ic_rupee"
                    style="@style/MyTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:id="@+id/il"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:hint="@string/rate_of_interest">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rate"
                    android:drawableEnd="@drawable/ic_percentage"
                    style="@style/MyTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="0dp"
                    android:id="@+id/tl"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/time_period_tenure">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/time"
                        style="@style/MyTextInputEditText"
                        android:drawableEnd="@drawable/ic_timing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/rg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/months"
                        android:textColor="#fff" />

                    <RadioButton
                        android:id="@+id/year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/years"
                        android:textColor="#fff" />
                </RadioGroup>
            </LinearLayout>


            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textColor="#FF0000"
                android:textStyle="bold"
                android:foreground="@drawable/ripple"
                android:background="@drawable/rounded_corner"
                android:text="@string/calculate_emi" />
            <Button
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="#FF0000"
                android:textStyle="bold"
                android:foreground="@drawable/ripple"
                android:background="@drawable/rounded_corner"
                android:text="@string/create_amortization_table"
                android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/lv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"
                    android:background="@drawable/rounded_corner"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:inputType="textMultiLine"
                        android:layout_margin="10dp"
                        android:textColor="#3140D5"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:inputType="textMultiLine"
                        android:layout_margin="10dp"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/rl"
                android:layout_marginBottom="100dp"
                android:visibility="gone"
                android:background="@drawable/rounded_corner"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">

                <!-- ProgressBar that represents a total of 100% -->
                <ProgressBar
                    android:id="@+id/background_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="100"
                    android:progressDrawable="@drawable/stats_full"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/stats"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="50"
                    android:progressDrawable="@drawable/stats_progress"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"  />

                <TextView
                    android:id="@+id/per"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="#0017FF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <!-- ProgressBar that represents a chart slice, where "android:progress" is the % value of the slice -->
                <TextView
                    android:id="@+id/interestP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/interest"
                    android:textColor="#0017FF"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/principalP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/principal"
                    android:textColor="#1B5E20"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_above="@id/botlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/adMob_banner_id">
    </com.google.android.gms.ads.AdView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:scaleY="2"
        android:scaleX="2"
        android:id="@+id/main_bar"
        android:indeterminateTint="#FF6F00"
        android:layout_height="wrap_content"/>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:id="@+id/botlay"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@color/colorCustom"
    android:layout_alignParentBottom="true"
    android:weightSum="5"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_margin="5dp"
        android:id="@+id/terms_conditions"
        android:textColor="#fff"
        android:foreground="@drawable/ripple"
        android:text="@string/terns_u0026_conditions"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textColor="#fff"
        android:text="text"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:id="@+id/copy_year"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:id="@+id/privacy"
        android:layout_margin="5dp"
        android:foreground="@drawable/ripple"
        android:textColor="#fff"
        android:gravity="end"
        android:text="@string/privacy_policy"
        android:layout_height="wrap_content"/>
</LinearLayout>

</RelativeLayout>